--- a/history-one.html
+++ b/history-one.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name=author" content="Paul McCormack">
-    <title>John Baskerville Version 1</title>
+    <title>A Brief History of Type</title>
 </head>
 
 <body>
