--- a/history-one.html
+++ b/history-one.html
@@ -29,13 +29,13 @@
         </section>
 
         <section>
-            <h1>William Caslon
+            <h1>William Caslon</h1>
 
                 <p>William Caslon I (1692 – 1766), also known as William Caslon the Elder, was an English gunsmith and designer of typefaces. The distinction and legibility of his type secured him the patronage of the leading printers of the day in England and the continent. His typefaces transformed English type design and first established an English national typographic style.</p>
 
                 <p>Caslon was born in Cradley, Worcestershire in 1692 and trained as an engraver in nearby Birmingham. In 1716, he started business in London as an engraver of gun locks and barrels and as a bookbinder's tool cutter. Having contact with printers, he was induced to fit up a type foundry, largely through the encouragement of <b>William Bowyer</b>.</p>
 
-        <section>John Baskerville
+        <section><h1>John Baskerville</h1>
 
             <p>John Baskerville (1706 – 1775) was an English businessman whose entrepreneurial attentions included <i>japanning</i> and <i>papier-mâché</i>; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</p>
 
