Starting with CSS

--- a/baskerville-two.html
+++ b/baskerville-two.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name=author" content="Jessica Donnan">
-    <title>John Baskerville Version 1</title>
+    <title>John Baskerville Version 2</title>
+
+    <!-- LINKING CSS FILE -->
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
