--- a/baskerville-two.html
+++ b/baskerville-two.html
@@ -14,7 +14,7 @@
     <header>
         <h1>John Baskerville</h1>
             <h2>Letter Founder & Master Printer</h2>
-                <p>John Baskerville (1706–1775) was an English businessman whose entrepreneurial attentions included <i>japanning</i> and ,<i>papier-mâché</i>; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</p>
+                <p>John Baskerville (1706–1775) was an English businessman whose entrepreneurial attentions included <i>japanning</i> and <i>papier-mâché</i>; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</p>
     </header>
 
 <section>
