--- a/baskerville-three.html
+++ b/baskerville-three.html
@@ -7,6 +7,11 @@
 
     <!-- LINKING CSS FILE -->
     <link href="css/style_two.css" type="text/css" rel="stylesheet" />
+
+    <!-- ADDED GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Libre+Baskerville&display=swap" rel="stylesheet">"
 </head>
 
 <body>
