--- a/history-three.html
+++ b/history-three.html
@@ -6,6 +6,15 @@
 
     <!-- LINKING CSS FILE-->
     <link href="css/style_type.css" type="text/css" rel="stylesheet"
+
+
+    <!--ADDING GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap" rel="stylesheet">
+
+
+
 </head>
 
 <body>
